// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDelegate should allow multiple selection 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhUy cowKBD fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-50 mt-5 mr-5"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="p-1"
        >
          <div
            class="sc-AxhCb koOqYD"
            height="12"
            width="12"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2
        class="mb-0 text-3xl font-bold"
      >
        Select a Delegate
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="mt-1 text-theme-neutral-dark"
        >
          Please select the Delegate you wish to vote for. For additional information about the delegate and/or payouts, please visit MarketSquare.
        </div>
        <div
          class="-mx-12"
        >
          <div
            class="bg-theme-neutral-contrast px-12 pt-8 pb-8 mt-8"
            data-testid="SearchBar"
          >
            <div
              class="flex items-center px-10 py-6 bg-white rounded shadow-xl"
            >
              <div
                class="sc-AxhCb fxrKLH w-4 mr-8 text-theme-neutral-300"
                height="1em"
                width="1em"
              >
                <svg>
                  search.svg
                </svg>
              </div>
              <div
                class="flex-1 pl-4 mr-4 border-l border-theme-neutral-200"
              >
                <input
                  class="sc-AxheI xavPU overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 border-none shadow-none"
                  data-testid="Input"
                  placeholder="Search for a Delegate"
                />
              </div>
              <button
                class="sc-AxjAm ddQVWI my-1"
                color="primary"
                data-testid="SearchBar__button"
                type="button"
              >
                <span
                  class="px-2 text-sm"
                >
                  Find it
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-14"
        >
          <div
            class="sc-fznKkj crvYjk"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Choose
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                         
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Delegate Name
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Rank
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--4"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        MarketSquare
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--5"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Forged ARK
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--6"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top justify-end mr-8"
                    >
                      <div>
                        Votes
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--7"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Voting
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxirZ hdHVRv"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate1"
                      type="checkbox"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate1
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #1
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      225,946 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      2.43%
                    </span>
                    <span>
                      3,143,322 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-contrast"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 bg-theme-success-contrast"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxirZ hdHVRv"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate2"
                      type="checkbox"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate2
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #2
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      465,437 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      1.828%
                    </span>
                    <span>
                      2,364,566 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-contrast"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxirZ hdHVRv"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate3"
                      type="checkbox"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate3
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #3
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 bg-theme-success-contrast"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxirZ hdHVRv"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate4"
                      type="checkbox"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate4
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #4
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-contrast"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="absolute bottom-0 left-0 right-0 pt-8 pb-10 pl-4 pr-12 bg-white shadow-2xl"
          data-testid="SelectedDelegateModal__footer"
        >
          <div
            class="flex"
          >
            <div
              class="px-8 mr-8 font-semibold border-r border-theme-neutral-300"
            >
              <div
                class="text-sm text-theme-neutral"
              >
                Quantity
              </div>
              <div
                class="text-theme-neutral-dark"
              >
                2/50
              </div>
            </div>
            <div
              class="flex-1"
            >
              <div
                class="flex justify-between"
              >
                <div
                  class="font-semibold"
                >
                  <div
                    class="text-sm text-theme-neutral"
                  >
                    Delegates
                  </div>
                  <div
                    class="cursor-pointer text-theme-primary-dark hover:text-theme-primary-500"
                    data-testid="SelectedDelegateModal__toggle-show-selected"
                  >
                    Hide List
                  </div>
                </div>
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  type="button"
                >
                  Vote
                </button>
              </div>
              <div
                class="mt-2"
              >
                <div
                  class="flex items-center py-4 font-semibold border-b border-dashed border-theme-neutral-200 last:border-0"
                >
                  <div
                    class="flex flex-1"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fbgOiH mr-8"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                    <div
                      class="mr-2"
                    >
                      Delegate2
                    </div>
                    <div
                      class="text-theme-neutral"
                    >
                      AADDDDDDDRREEEEESSSSSSS
                    </div>
                  </div>
                  #2
                </div>
                <div
                  class="flex items-center py-4 font-semibold border-b border-dashed border-theme-neutral-200 last:border-0"
                >
                  <div
                    class="flex flex-1"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fbgOiH mr-8"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                    <div
                      class="mr-2"
                    >
                      Delegate4
                    </div>
                    <div
                      class="text-theme-neutral"
                    >
                      AADDDDDDDRREEEEESSSSSSS
                    </div>
                  </div>
                  #4
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectDelegate should not render if not open 1`] = `<DocumentFragment />`;

exports[`SelectDelegate should only allow one selection 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhUy cowKBD fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-50 mt-5 mr-5"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="p-1"
        >
          <div
            class="sc-AxhCb koOqYD"
            height="12"
            width="12"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2
        class="mb-0 text-3xl font-bold"
      >
        Select a Delegate
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="mt-1 text-theme-neutral-dark"
        >
          Please select the Delegate you wish to vote for. For additional information about the delegate and/or payouts, please visit MarketSquare.
        </div>
        <div
          class="-mx-12"
        >
          <div
            class="bg-theme-neutral-contrast px-12 pt-8 pb-8 mt-8"
            data-testid="SearchBar"
          >
            <div
              class="flex items-center px-10 py-6 bg-white rounded shadow-xl"
            >
              <div
                class="sc-AxhCb fxrKLH w-4 mr-8 text-theme-neutral-300"
                height="1em"
                width="1em"
              >
                <svg>
                  search.svg
                </svg>
              </div>
              <div
                class="flex-1 pl-4 mr-4 border-l border-theme-neutral-200"
              >
                <input
                  class="sc-AxheI xavPU overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 border-none shadow-none"
                  data-testid="Input"
                  placeholder="Search for a Delegate"
                />
              </div>
              <button
                class="sc-AxjAm ddQVWI my-1"
                color="primary"
                data-testid="SearchBar__button"
                type="button"
              >
                <span
                  class="px-2 text-sm"
                >
                  Find it
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-14"
        >
          <div
            class="sc-fznKkj crvYjk"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Choose
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                         
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Delegate Name
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Rank
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--4"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        MarketSquare
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--5"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Forged ARK
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--6"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top justify-end mr-8"
                    >
                      <div>
                        Votes
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--7"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Voting
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate1"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate1
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #1
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      225,946 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      2.43%
                    </span>
                    <span>
                      3,143,322 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-contrast"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate2"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate2
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #2
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      465,437 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      1.828%
                    </span>
                    <span>
                      2,364,566 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-contrast"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 bg-theme-success-contrast"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate3"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate3
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #3
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate4"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate4
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #4
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-contrast"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="absolute bottom-0 left-0 right-0 pt-8 pb-10 pl-4 pr-12 bg-white shadow-2xl"
          data-testid="SelectedDelegateModal__footer"
        >
          <div
            class="flex"
          >
            <div
              class="px-8 mr-8 border-r border-theme-neutral-300"
            >
              <div
                class="text-sm text-theme-neutral"
              >
                Rank
              </div>
              <div
                class="font-semibold text-theme-neutral-dark"
              >
                #3
              </div>
            </div>
            <div
              class="flex flex-1"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf mr-2"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                    title="test"
                  />
                </div>
              </div>
              <div>
                <div
                  class="text-sm text-theme-neutral"
                >
                  Delegate Address
                </div>
                <div
                  class="font-semibold text-theme-neutral-dark"
                >
                  Delegate3 - AADDDDDDDRREEEEESSSSSSS
                </div>
              </div>
            </div>
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Vote
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectDelegate should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhUy cowKBD fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-50 mt-5 mr-5"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="p-1"
        >
          <div
            class="sc-AxhCb koOqYD"
            height="12"
            width="12"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2
        class="mb-0 text-3xl font-bold"
      >
        Select a Delegate
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="mt-1 text-theme-neutral-dark"
        >
          Please select the Delegate you wish to vote for. For additional information about the delegate and/or payouts, please visit MarketSquare.
        </div>
        <div
          class="-mx-12"
        >
          <div
            class="bg-theme-neutral-contrast px-12 pt-8 pb-8 mt-8"
            data-testid="SearchBar"
          >
            <div
              class="flex items-center px-10 py-6 bg-white rounded shadow-xl"
            >
              <div
                class="sc-AxhCb fxrKLH w-4 mr-8 text-theme-neutral-300"
                height="1em"
                width="1em"
              >
                <svg>
                  search.svg
                </svg>
              </div>
              <div
                class="flex-1 pl-4 mr-4 border-l border-theme-neutral-200"
              >
                <input
                  class="sc-AxheI xavPU overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 border-none shadow-none"
                  data-testid="Input"
                  placeholder="Search for a Delegate"
                />
              </div>
              <button
                class="sc-AxjAm ddQVWI my-1"
                color="primary"
                data-testid="SearchBar__button"
                type="button"
              >
                <span
                  class="px-2 text-sm"
                >
                  Find it
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-14"
        >
          <div
            class="sc-fznKkj crvYjk"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Choose
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                         
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Delegate Name
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Rank
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--4"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        MarketSquare
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--5"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Forged ARK
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--6"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top justify-end mr-8"
                    >
                      <div>
                        Votes
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxhCb AoNtw"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--7"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top undefined"
                    >
                      <div>
                        Voting
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate1"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate1
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #1
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      225,946 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      2.43%
                    </span>
                    <span>
                      3,143,322 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-contrast"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate2"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate2
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #2
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      465,437 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      1.828%
                    </span>
                    <span>
                      2,364,566 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-contrast"
                    />
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate3"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate3
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #3
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  >
                    <a
                      href="https://ms.com"
                    >
                      <svg
                        class="inline-block h-5 cursor-pointer"
                      >
                        link.svg
                      </svg>
                    </a>
                  </td>
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-200 false"
                >
                  <td
                    class="w-16 text-center"
                  >
                    <input
                      class="sc-AxgMl juCCtO"
                      color="success"
                      data-testid="SelectedDelegateModal__select-delegate-Delegate4"
                      type="radio"
                    />
                  </td>
                  <td
                    class="w-16 px-4"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kxqyvY"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="test"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                          title="test"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <div>
                      Delegate4
                    </div>
                  </td>
                  <td
                    class="py-6 font-semibold text-theme-neutral-dark"
                  >
                    #4
                  </td>
                  <td
                    class="py-6 text-center text-theme-primary-500"
                  />
                  <td
                    class="py-6 font-semibold whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <div>
                      693,236 A
                    </div>
                  </td>
                  <td
                    class="py-6 pr-8 font-semibold text-right whitespace-no-wrap text-theme-neutral-dark"
                  >
                    <span
                      class="mr-1 text-sm text-theme-neutral"
                    >
                      1.528%
                    </span>
                    <span>
                      1,976,303 A
                    </span>
                  </td>
                  <td
                    class="w-16"
                  >
                    <div
                      class="sc-AxiKw eXxQUT  border-theme-primary-contrast"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
